# novel-agent

./: .gitignore  CONTEXT.md  README.md  REVIEW_FIX_REPORT.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml  requirements.txt
app/: main.py
app/application/: __init__.py  characters.py  (+5 more)
licenses/: Markdown-BSD-3-Clause.txt  PyYAML-MIT.txt  Python-PSF-2.0.txt  httpx-BSD-3-Clause.txt  keyring-MIT.txt  openai-Apache-2.0.txt  qasync-BSD-2-Clause.txt
tests/: conftest.py  test_application_architecture.py  test_bible_assistant.py  test_bible_editor.py  test_bible_editor_phase3.py  test_bible_element_dialog.py  test_bible_element_editor.py  test_bible_element_list.py  test_bible_element_selector.py  test_bible_graph.py  test_bible_migration.py  test_bible_models.py  test_bible_overview.py  test_bible_projection.py  test_bible_prompts.py  test_bible_repository.py  test_bible_search.py  test_bible_suggestion_apply.py  test_bible_suggestion_dialog.py  test_bible_template_integration.py  test_character_application_service.py  test_character_context.py  test_character_custom_fields.py  test_character_definition_service.py  test_character_detail_catalog.py  test_character_editor.py  test_character_element_relations.py  test_character_events.py  test_character_history.py  test_character_state.py  test_character_state_edit_dialog.py  test_character_storage.py  test_collapsible_section.py  test_context_builder.py  test_context_preview.py  test_context_storage.py  test_create_project_dialog.py  test_detail_field.py  test_display_labels.py  test_e2e_event_sourcing.py  (+49 more)
(+91 files in other folders)
