[project]
name = "novel-forge"
version = "0.1.1"
description = "AI-Powered Chinese Web Novel Writing Studio"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "qasync>=0.27",
    "keyring>=25.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
qt_api = "pyside6"
